Fix style of more-visible-remaining-time

--- a/app/src/quiz/more-visible-remaining-time/style.css
+++ b/app/src/quiz/more-visible-remaining-time/style.css
@@ -6,4 +6,6 @@
     color: white !important;
     font-size: x-large !important;
     padding: 10px !important;
+    z-index: 2147483647 !important;
+    pointer-events: none !important;
 }
